src/main/java/com/example/error/springbooterror/errors/UserNotFoundException.java
package com.example.error.springbooterror.errors;

public class UserNotFoundException extends RuntimeException {

    public UserNotFoundException(String id) {
        super("El usuario con id ".concat(id).concat(" no existe en el sistema."));
    }

}